2020-03-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix issue for pyqt4
	* tagged as 2.40.2

2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for configuration state for py3
	* tagged as 2.40.1

2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
	* add support for reading LavueState in LavueController
	* tagged as 2.40.0

2020-03-13 Jan Kotanski <jan.kotanski@desy.de>
	* add PixelSizeX and PixelSizeY to LavueController
	* add support for changing logging level from LavueController
	* catch exceptions from paint method
	* tagged as 2.39.0

2020-03-12 Jan Kotanski <jan.kotanski@desy.de>
	* remove callback on disconnect Tango Events
	* tagged as 2.38.2

2020-03-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix deadlock problem in  unsubscribe tango events
	* tagged as 2.38.1

2020-03-05 Jan Kotanski <jan.kotanski@desy.de>
	* add relative float rotation for image sources
	* tagged as 2.38.0

2020-03-03 Jan Kotanski <jan.kotanski@desy.de>
	* add timeout to HTTPsource back
	* do not interrupt  HTTP connection on 'Image not available'
	* tagged as 2.37.2

2020-03-01 Jan Kotanski <jan.kotanski@desy.de>
	* revert applying timeout for HTTP
	* tagged as 2.37.1

2020-02-28 Jan Kotanski <jan.kotanski@desy.de>
	* add relative transformations for image sources
	* skip execute closeEvent twice
	* tagged as 2.37.0

2020-02-27 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading Nexus files with unknown extension
	* add @debugmethod statement back
	* add timeout tho HTTPsource
	* tagged as 2.36.1

2020-02-27 Jan Kotanski <jan.kotanski@desy.de>
	* add support DATA_READY_EVENT in Tango Events image source
	* tagged as 2.36.0

2020-02-26 Jan Kotanski <jan.kotanski@desy.de>
	* tune long debug printout
	* tagged as 2.35.8

2020-02-26 Jan Kotanski <jan.kotanski@desy.de>
	* fix for debug class method
	* tagged as 2.35.7

2020-02-26 Jan Kotanski <jan.kotanski@desy.de>
	* impove logger and add liveViewer.sardanaUtils and imageSource logging
	* make py2/py3 compatibility for sardana