@@ -1,5 +1,6 @@
 2020-03-20 Jan Kotanski <jan.kotanski@desy.de>
 	* fix issue for pyqt4
+	* fixes for image source combobox and adding image sources
 	* tagged as 2.40.2
 
 2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
